--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
-
+	.flex-container {
+	  display: flex;
+	  flex-direction: row;
+	  justify-content: center;
+	}	
+	
+	.flex-container-contact {
+	  margin: 30px;
+	  padding: 10px;
+	  background-color: rgba(172, 223, 135,0.5);
+    }
+		
+	.flex-container-main {
+	  margin: 30px;
+	  padding: 10px;
+	}
